fix(search): make sure french sentence fits in
The french translation of "Open until" ie
"Ouvert jusqu'au" did not fit in the small
course list view in the search engine.

--- a/funsite/static/funsite/css/fun.css
+++ b/funsite/static/funsite/css/fun.css
@@ -809,7 +809,8 @@ ul.breadcrumbs li a:focus {
     width: 270px;
 }
 .small-course .footer .date {
-    padding-left: 46px;
+    padding-left: 42px;
+    padding-right: 2px;
     padding-top: 4px;
     background: url('../images/icones/calendar.png') 10px 8px no-repeat;
     font-weight: 500;
